test_regress/t/t_display_stream_bad.out
%Error: t/t_display_stream_bad.v:11:15: Streaming concatenation cannot be used in an implicitly cast context (IEEE 1800-2023 11.4.17)
                                      : ... note: In instance 't'
                                      : ... Suggest use a cast
   11 |     $display({<<{value}});
      |               ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_display_stream_bad.v:12:22: Streaming concatenation cannot be used in an implicitly cast context (IEEE 1800-2023 11.4.17)
                                      : ... note: In instance 't'
                                      : ... Suggest use a cast
   12 |     $display("%0d", {<<{value}});
      |                      ^~
%Error: t/t_display_stream_bad.v:13:29: Streaming concatenation cannot be used in an implicitly cast context (IEEE 1800-2023 11.4.17)
                                      : ... note: In instance 't'
                                      : ... Suggest use a cast
   13 |     void'($sformatf("%0d", {<<{value}}));
      |                             ^~
%Error: Exiting due to
